# QtScreenSwitcher

./: .gitignore  CMakeLists.txt  CustomToggle.h  MainWindow.cpp  MainWindow.h  README.md  ScreenManager.cpp  ScreenManager.h  SettingsManager.cpp  SettingsManager.h  ShortcutManager.cpp  ShortcutManager.h  TrayIcon.cpp  TrayIcon.h  main.cpp  resources.qrc
ui/: style.qss
